tests/machine/x/scala/outer_join.error
exit status 1
/workspace/mochi/tests/machine/x/scala/outer_join.scala:7: error: not found: value _left_join
  def _outer_join[A,B](a: List[A], b: List[B])(cond: (A,B) => Boolean): List[(Option[A], Option[B])] = { val left = _left_join(a,b)(cond).map{ case(x,y) => (Some(x), y) }; val right = _right_join(a,b)(cond).collect{ case(None, r) => (None, Some(r)) }; left ++ right }
                                                                                                                    ^
/workspace/mochi/tests/machine/x/scala/outer_join.scala:7: error: not found: value _right_join
  def _outer_join[A,B](a: List[A], b: List[B])(cond: (A,B) => Boolean): List[(Option[A], Option[B])] = { val left = _left_join(a,b)(cond).map{ case(x,y) => (Some(x), y) }; val right = _right_join(a,b)(cond).collect{ case(None, r) => (None, Some(r)) }; left ++ right }
                                                                                                                                                                                        ^
/workspace/mochi/tests/machine/x/scala/outer_join.scala:17: error: value id is not a member of Option[outer_join.Order]
          println(("Order") + " " + (row.order.id) + " " + ("by") + " " + (row.customer.name) + " " + ("- $") + " " + (row.order.total))
                                               ^
/workspace/mochi/tests/machine/x/scala/outer_join.scala:17: error: value name is not a member of Option[outer_join.Customer]
          println(("Order") + " " + (row.order.id) + " " + ("by") + " " + (row.customer.name) + " " + ("- $") + " " + (row.order.total))
                                                                                        ^
/workspace/mochi/tests/machine/x/scala/outer_join.scala:17: error: value total is not a member of Option[outer_join.Order]
          println(("Order") + " " + (row.order.id) + " " + ("by") + " " + (row.customer.name) + " " + ("- $") + " " + (row.order.total))
                                                                                                                                 ^
/workspace/mochi/tests/machine/x/scala/outer_join.scala:19: error: value id is not a member of Option[outer_join.Order]
          println(("Order") + " " + (row.order.id) + " " + ("by") + " " + ("Unknown") + " " + ("- $") + " " + (row.order.total))
                                               ^
/workspace/mochi/tests/machine/x/scala/outer_join.scala:19: error: value total is not a member of Option[outer_join.Order]
          println(("Order") + " " + (row.order.id) + " " + ("by") + " " + ("Unknown") + " " + ("- $") + " " + (row.order.total))
                                                                                                                         ^
/workspace/mochi/tests/machine/x/scala/outer_join.scala:22: error: value name is not a member of Option[outer_join.Customer]
        println(("Customer") + " " + (row.customer.name) + " " + ("has no orders"))
                                                   ^
8 errors found
